# ai-project-template

./: .coverage  .env.example  .env.staging.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  SHOW TimeZone;.sql  STAGING_SETUP.md  alembic.ini  alembic.ini.bak  api.http  check_staging.ps1  conftest.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements.api.txt  requirements.in  requirements.txt  sitecustomize.py  test_db.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-build.yml  ci.yml  deploy-staging.yml
app/: __init__.py  api.py  database.py  db.py  deps.py  main.py  metrics.py  middleware.py  rate_limit.py  security.py
app/models/: __init__.py  customer.py  note.py  user.py
app/repositories/: customer_repo.py  note_repo.py  user_repo.py
app/routers/: auth.py  customers.py  notes.py
app/schemas/: customer.py  note.py  user.py
deploy/staging/: .env.staging.example  Caddyfile  README.md  docker-compose.yml  smoke.sh
docs/: DEPLOYMENT.md
migrations/: env.py
migrations/versions/: 2f387382491d_add_indexes_to_notes_table.py  a6c0092c2b9f_add_users_table.py  ae94756df383_baseline_schema.py  b7a2e2c1b9a4_adjust_customers_created_at_timestamptz_notnull.py  bfdf1b97009a_baseline_create_customers.py  (+4 more)
migrations_bak/: env.py
scripts/: create_tables.py  test_crud.py
tests/: smoke_test.sh  test_cascade_deletes.py  test_customers.py  test_hardening.py  test_notes.py  test_notes_pagination.py
